--- a/cultivating.html
+++ b/cultivating.html
@@ -43,9 +43,9 @@ header {
 <p>Realizing one's full potential and finding deep meaning and fulfillment in life.</p>
                <h3 style="color: white;">2.Contribution</h3> 
 <p>Using one's unique talents and passions to make a positive impact on the world.</p>
-               <h3 style="color: white;">Financial Lossess</h3> 
+               <h3 style="color: white;">3.Financial Lossess</h3> 
 <p>Reduced profits and customer loyalty.</p>
-               <h2 style="color: white;">3.Meaning & Fulfillment</h2>
+               <h2 style="color: white;">4.Meaning & Fulfillment</h2>
              
 <p>Aligning one's daily actions and choices with a clear sense of purpose.</p>
                
